<resources>
    <string name="app_name">Asteroides</string>
    <string name="asteroides">Asteroides</string>
    <string name="jugar">Jugar</string>
    <string name="configurar">Configurar</string>
    <string name="acerca_de">Acerca de</string>
    <string name="salir">Salir</string>
    <string name="acerdade">Este programa ha sido desarrollado como ejemplo en el curso de Android para demostrar cómo se pueden lanzar nuevas actividades desde la actividad principal.</string>
    <string name="acercade_label_activity">Acerca de ...</string>
    <string name="puntuaciones">Puntuaciones</string>
</resources>
